--- a/Submission_Exploratory/Submission_Exploratory.ipynb
+++ b/Submission_Exploratory/Submission_Exploratory.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "### X dataset - Chicago crime dataset\n",
     "The dataset contains various reported crimes in Chicago from 2001 till date.\n",
+    "\n",
     "Some of the important columns are\n",
     "\n",
     "\"Primary Type\" - the type of crime reported. Ex: NARCOTICS, BATTERY\n",
@@ -681,13 +682,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 196,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "6x6t9PqL7Gem",
-    "outputId": "1aba5f3c-18c5-48b2-b021-3a8d2cd23774"
+    "outputId": "b1a8a25a-fb87-403e-c2f1-924f9c06cf08"
    },
    "outputs": [
     {
@@ -740,15 +741,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "bQuFQ0Rqfyrj"
-   },
-   "source": [
-    "**Since the null Hypothesis is checking for linear correlation. We take the threshold = 0.5**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "8gG92_1NgzRp"
    },
    "source": [
@@ -758,7 +750,16 @@
     "\n",
     "As Covid rampages the streets of Chicago, people tend to find peace at their homes with their loved ones, leaving streets deserted. So, we are expecting a decrease in the crime rate on streets. We test the null hypothesis with pearson’s correlation coefficient statistic.\n",
     "\n",
-    "If it turns out that the street crime actually decreased during the covid. Police and actually decrease patrol rounds and use those resources elsewhere."
+    "If it turns out that the street crime actually decreased during the covid. Police and actually decrease patrol rounds and use those resources elsewhere.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "B7cfBOgYoUMN"
+   },
+   "source": [
+    "**Since the null Hypothesis is checking for inverse linear correlation. We take the threshold = -0.5**"
    ]
   },
   {
@@ -770,97 +771,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 197,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "o3oQKJOk-1xi",
-    "outputId": "5377e31e-d3ea-4416-a178-02e71067fad4",
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pearson Correlation Coefficient Value is: -0.07\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Inference 2\n",
-    "filtered_crimes_sorted = df_filtered\n",
-    "\n",
-    "filtered_crimes_sorted = filtered_crimes_sorted[(filtered_crimes_sorted['Primary Type'] == \"NARCOTICS\") & (filtered_crimes_sorted[\"Epoch\"]> 1584676800)]\n",
-    "filtered_crimes_sorted[\"DateStr\"] = filtered_crimes_sorted.apply(lambda row : datetime.fromtimestamp(row[\"Epoch\"]).date(), axis = 1)\n",
-    "data = filtered_crimes_sorted[\"DateStr\"].value_counts(sort = False).sort_index()\n",
-    "data = np.array(data[58:58+67].tolist())\n",
-    "\n",
-    "US_changed_death = US_deaths[US_deaths['State'] == \"IL\"].T.rename(index = {'State':'Date'})\n",
-    "US_changed_death = US_changed_death.loc['2020-03-19':'2020-05-25']\n",
-    "US_changed_death = US_changed_death.diff()\n",
-    "US_changed_death = US_changed_death[1:]\n",
-    "\n",
-    "# PEARSON CORRELATION COEFFICIENT for Narcotics VS Deaths in the State of Illinois\n",
-    "pearson_coef = pearson_correlation_coefficient(data, US_changed_death[14].to_numpy())\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "jrodyS1iet10"
-   },
-   "source": [
-    "**The pearson correlation coefficient is -0.07 and is smaller than the threshold 0.5 hence we accept the null hypothesis.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "I4tfm1eXhLBk"
-   },
-   "source": [
-    "**Inference 3**\n",
-    "\n",
-    "Narcotics related crimes in Chicago vs Covid related deaths in state of Illinois are linearly correlated.\n",
-    "\n",
-    "Generally, more covid deaths are observed on patients having pre-existing conditions. Increase in narcotic crimes imply increase in the usage of narcotics. As people consume more narcotic substances, this weakens their immune system and are susceptible to dying because of covid.  We test the null hypothesis with pearson’s correlation coefficient statistic.\n",
-    "\n",
-    "If it turns out that the Narcotic related crimes and covid deaths are positively correlated, then the drug control bureau can probably take some stringent norms to reduce the usage of narcotics."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "5hGBpFT0f33j"
-   },
-   "source": [
-    "**Since the null Hypothesis is checking for inverse linear correlation. We take the threshold = -0.5**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "OHJoeemsRFwx",
-    "outputId": "e48a0d59-2c9c-4e1c-f6e7-3029176ace5d"
+    "outputId": "e447cded-ea9c-48ef-ea19-6ff106871399"
    },
    "outputs": [
     {
@@ -884,7 +801,7 @@
     }
    ],
    "source": [
-    "#Inference 3\n",
+    "#Inference 2\n",
     "\n",
     "filtered_crimes_sorted = df_filtered\n",
     "\n",
@@ -896,7 +813,6 @@
     "# PEARSON CORRELATION COEFFICIENT for Crimes reported in streets VS Confirmed cases in the State of Illinois\n",
     "pearson_coef = pearson_correlation_coefficient(data, US_changed[14].to_numpy())\n",
     "\n",
-    "\n",
     "\n"
    ]
   },
@@ -907,6 +823,93 @@
    },
    "source": [
     "**The pearson correlation coefficient is 0.2 and is not smaller than the threshold -0.5 hence we accept the null hypothesis.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "I4tfm1eXhLBk"
+   },
+   "source": [
+    "**Inference 3**\n",
+    "\n",
+    "Narcotics related crimes in Chicago vs Covid related deaths in state of Illinois are linearly correlated.\n",
+    "\n",
+    "Generally, more covid deaths are observed on patients having pre-existing conditions. Increase in narcotic crimes imply increase in the usage of narcotics. As people consume more narcotic substances, this weakens their immune system and are susceptible to dying because of covid.  We test the null hypothesis with pearson’s correlation coefficient statistic.\n",
+    "\n",
+    "If it turns out that the Narcotic related crimes and covid deaths are positively correlated, then the drug control bureau can probably take some stringent norms to reduce the usage of narcotics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "5hGBpFT0f33j"
+   },
+   "source": [
+    "\n",
+    "\n",
+    "**Since the null Hypothesis is checking for linear correlation. We take the threshold = 0.5**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "OHJoeemsRFwx",
+    "outputId": "a56e11e4-8efe-4497-86bd-aa2bd621c0a7"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearson Correlation Coefficient Value is: -0.07\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Inference 3\n",
+    "\n",
+    "filtered_crimes_sorted = df_filtered\n",
+    "\n",
+    "filtered_crimes_sorted = filtered_crimes_sorted[(filtered_crimes_sorted['Primary Type'] == \"NARCOTICS\") & (filtered_crimes_sorted[\"Epoch\"]> 1584676800)]\n",
+    "filtered_crimes_sorted[\"DateStr\"] = filtered_crimes_sorted.apply(lambda row : datetime.fromtimestamp(row[\"Epoch\"]).date(), axis = 1)\n",
+    "data = filtered_crimes_sorted[\"DateStr\"].value_counts(sort = False).sort_index()\n",
+    "data = np.array(data[58:58+67].tolist())\n",
+    "\n",
+    "US_changed_death = US_deaths[US_deaths['State'] == \"IL\"].T.rename(index = {'State':'Date'})\n",
+    "US_changed_death = US_changed_death.loc['2020-03-19':'2020-05-25']\n",
+    "US_changed_death = US_changed_death.diff()\n",
+    "US_changed_death = US_changed_death[1:]\n",
+    "\n",
+    "# PEARSON CORRELATION COEFFICIENT for Narcotics VS Deaths in the State of Illinois\n",
+    "pearson_coef = pearson_correlation_coefficient(data, US_changed_death[14].to_numpy())\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "jrodyS1iet10"
+   },
+   "source": [
+    "**The pearson correlation coefficient is -0.07 and is smaller than the threshold 0.5 hence we accept the null hypothesis.**"
    ]
   }
  ],
