--- a/Submission_Mandatory_1_2/ipynb_files/2d.ipynb
+++ b/Submission_Mandatory_1_2/ipynb_files/2d.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
+    "covid_data = pd.read_csv('covid_dat_orig.csv')\n",
+    "covid_data_actual = covid_data.iloc[:,1:].diff()\n",
+    "covid_data.fillna(0, inplace=True)\n",
     "covid_combined = pd.DataFrame()\n",
-    "covid_combined[\"date\"] = covid_data_actual[\"Date\"]\n",
+    "covid_combined[\"date\"] = covid_data[\"Date\"]\n",
     "covid_combined['date'] = pd.to_datetime(covid_combined['date'])  \n",
     "covid_combined[\"cases\"] = covid_data_actual[\"PA confirmed\"] + covid_data_actual[\"RI confirmed\"]\n",
     "covid_combined[\"deaths\"] = covid_data_actual[\"PA deaths\"] + covid_data_actual[\"RI deaths\"]\n",
@@ -41,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +56,7 @@
        " [0.0, 20.0, 31.0, 16.0, 22.0, 14.0, 3.0]]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
